feat: Praktikumsstellen authorization via department (#751)
* feat: authorize praktikumsstellen via department

* chore: format

* chore: format

* refact(backend): rm dienststellen normalization

* chore(backend): format

* chore(backend): implement review

* chore: implement review

* feat(frontend): use hint instead of rule for own department validation

* chore: implement review

* chore(backend): use new department naming

* chore(backend): use new department naming

* chore: imlement review feedback

* chore: implement review feedback

* chore: implement review feedback

* chore: spotless